[package]
name = "uzers"
description = "Continuation of users, a library for accessing Unix users and groups"

authors = ["Sandro-Alessio Gierens <sandro@gierens.de>", "Benjamin Sago <ogham@bsago.me>"]
documentation = "https://docs.rs/uzers/"
exclude = [
    "/.github",
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/gierens/uzers-rs"
version = "0.11.1"

[features]
default = ["cache", "mock", "logging"]
cache = []
mock = []
logging = ["log"]

[dependencies.libc]
version = "0.2"

[dependencies.log]
version = "0.4"
optional = true
default_features = false

[dev_dependencies.env_logger]
version = "0.7"
default_features = false
features = []
