[package]
name = "uzers"
description = "Continuation of users, a library for accessing Unix users and groups"

authors = ["Sandro-Alessio Gierens <sandro@gierens.de>", "Benjamin Sago <ogham@bsago.me>"]
documentation = "https://docs.rs/uzers/"
exclude = [
    "/.github",
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/rustadopt/uzers-rs"
version = "0.12.1"

[features]
default = ["cache", "mock", "logging"]
cache = []
mock = []
logging = ["log"]
test-integration = []

[dependencies.libc]
version = "0.2"

[dependencies.log]
version = "0.4"
optional = true
default-features = false

[dev-dependencies.env_logger]
version = "0.11"
default-features = false
features = []

[dev-dependencies.serial_test]
version = "^3.1"
